DASH-3604 [Frontend][Resources] Create additional options section

--- a/src/applications/appsco-resources-page-actions.html
+++ b/src/applications/appsco-resources-page-actions.html
@@ -161,6 +161,7 @@
 
         <appsco-page-global
                 id="appscoPageGlobal"
+                additional-options
                 info
                 filters></appsco-page-global>
     </template>
