DASH-3605 [Frontend][Additioal options] Create Additional options page and implement actions

--- a/src/appsco-app-header.html
+++ b/src/appsco-app-header.html
@@ -51,6 +51,7 @@
 <link rel="import" href="components/resource/appsco-share-resource.html">
 <link rel="import" href="components/resource/appsco-add-resource-admin.html">
 <link rel="import" href="components/resource/appsco-add-resource-to-resource-admin.html">
+<link rel="import" href="components/resource/appsco-idp-resource-add.html">
 <link rel="import" href="components/application/company/appsco-company-application-remove.html">
 <link rel="import" href="components/application/company/appsco-application-assignee-claims.html">
 <link rel="import" href="components/application/company/appsco-application-assignee-revoke.html">
@@ -188,6 +189,8 @@
 
 <link rel="import" href="components/get-started/appsco-tutorial.html">
 <link rel="import" href="components/get-started/appsco-tutorial-progress.html">
+
+<link rel="import" href="components/additional-options/appsco-additional-options-page-actions.html">
 
 <!-- Behaviours -->
 <link rel="import" href="components/components/appsco-behavior-export-report.html" />
