--- a/src/appsco-resources-page.html
+++ b/src/appsco-resources-page.html
@@ -103,7 +103,7 @@
         <iron-media-query query="(max-width: 800px)" query-matches="{{ tabletScreen }}"></iron-media-query>
         <iron-media-query query="(max-width: 600px)" query-matches="{{ mobileScreen }}"></iron-media-query>
 
-        <appsco-content id="appscoContent" resource-active$="[[ _resourceSectionActive ]]">
+        <appsco-content id="appscoContent" resource-active>
 
             <template is="dom-if" if="[[ !resourceAdmin ]]">
                 <div class="flex-vertical" resource>
@@ -408,11 +408,6 @@
                     type: Object,
                     value: function() { return {}; },
                     observer: '_pageConfigChanged'
-                },
-
-                _resourceSectionActive: {
-                    type: Boolean,
-                    computed: '_computeResourceSectionActive(pageConfig, resourceAdmin)'
                 }
             },
 
@@ -427,11 +422,6 @@
                 '_updateScreen(mobileScreen, tabletScreen)',
                 '_hideFilters(mobileScreen)'
             ],
-
-            _computeResourceSectionActive: function(pageConfig, resourceAdmin) {
-                return (pageConfig && pageConfig.hasOwnProperty('hide_resource_section') && !pageConfig.hide_resource_section)
-                    || (!pageConfig || !pageConfig.hasOwnProperty('hide_resource_section') && !resourceAdmin);
-            },
 
             attached: function() {
                 this.pageLoaded = false;
