--- a/src/company/appsco-company-brand-settings.html
+++ b/src/company/appsco-company-brand-settings.html
@@ -41,6 +41,10 @@ Custom property | Description | Default
                 --paper-input-container-label: {
                     font-size: 14px;
                 };
+
+                --appsco-upload-image-settings: {
+                    display: inline-block;
+                };
             }
             .form-input-container {
                 @apply(--layout-horizontal);
