--- a/src/application/appsco-resource-image-settings.html
+++ b/src/application/appsco-resource-image-settings.html
@@ -1,97 +1,55 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../bower_components/iron-image/iron-image.html">
 <link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 
 <link rel="import" href="../components/components/appsco-loader.html">
+<link rel="import" href="../components/components/appsco-upload-image-behavior.html">
+<link rel="import" href="../components/components/appsco-upload-image-styles.html">
 
 <dom-module id="appsco-resource-image-settings">
     <template>
-        <style>
-            :host {
-                display: inline-block;
-                position: relative;
-                @apply(--appsco-resource-image-settings);
-            }
-            .upload-container {
+        <style include="appsco-upload-image-styles">
+            :host .upload-container {
                 width: 64px;
                 height: 64px;
-                margin-left: auto;
-                margin-right: auto;
-                overflow: hidden;
-                position: relative;
-                @apply(--resource-image-upload-container);
-            }
-            .resource-image, .resource-image-upload, .icon-upload {
-                position: absolute;
-                top: 0;
-                bottom: 0;
-                left: 0;
-                right: 0;
-                margin: auto;
-            }
-            .resource-image {
-                width: 64px;
-                height: 64px;
-                --iron-image-placeholder: {
-                    background: #eeeeee;
-                };
-
-                @apply(--resource-image);
-            }
-            .resource-image-upload {
-                background-color: rgba(250, 250, 250, 0.8);
-                display: block;
-                opacity: 0;
-                z-index: 5;
-                cursor: pointer;
-                @apply(--resource-image-upload-field);
-            }
-            .resource-image-upload.no-image {
-                opacity: 1;
-            }
-            .resource-image-upload:hover {
-                opacity: 1;
-                transition: opacity .2s ease-in;
-            }
-            .icon-upload {
-                width: 32px;
-                height: 32px;
-                @apply(--resource-image-upload-icon);
-            }
-            .upload-file {
-                width: 0;
-                height: 0;
-                opacity: 0;
+                @apply(--image-upload-container);
             }
         </style>
 
         <div class="upload-container">
 
-            <appsco-loader active="[[ _loader ]]" loader-alt="Appsco is saving application icon" multi-color></appsco-loader>
+            <appsco-loader active="[[ _loader ]]" loader-alt="AppsCo is processing request" multi-color></appsco-loader>
 
-            <iron-image class="resource-image"
+            <iron-image class="item-image"
                         src="[[ resource.application_url ]]"
                         alt="Resource image"
                         class="sized"
-                        sizing="cover"
-                        preload fade></iron-image>
+                        sizing="cover"></iron-image>
 
             <template is="dom-if" if="[[ !previewOnly ]]">
-                <label for="resourceImage"
-                       class$="resource-image-upload [[ _imagePreview ]]">
+                <label for="imageInput"
+                       class$="item-image-upload [[ _imagePreview ]]">
                     <iron-icon icon="file-upload" class="icon-upload"></iron-icon>
                 </label>
 
                 <input type="file"
                        accept="image/*"
-                       id="resourceImage"
+                       id="imageInput"
                        name="resource-image"
                        class="upload-file"
                        on-change="_onUploadImage">
             </template>
         </div>
+
+        <template is="dom-if" if="[[ !previewOnly ]]">
+            <template is="dom-if" if="[[ resource.application_url ]]">
+                <paper-button class="remove-action"
+                              on-tap="_onRemoveImageAction">Reset icon</paper-button>
+            </template>
+        </template>
 
         <content select="[info]"></content>
 
@@ -113,141 +71,15 @@
                     notify: true
                 },
 
-                /**
-                 * Authorization token for the resource.
-                 */
-                authorizationToken: {
-                    type: String,
-                    value: ''
-                },
-
-                /**
-                 * resource image settings api link.
-                 */
-                imageSettingsApi: {
-                    type: String
-                },
-
-                /**
-                 * Preview only. Without upload.
-                 */
-                previewOnly: {
-                    type: Boolean,
-                    value: false
-                },
-
-                /**
-                 * Computed headers.
-                 * It contains authorization token.
-                 */
-                _computedHeaders: {
-                    type: Object,
-                    computed: "_computeHeaders(authorizationToken)"
-                },
-
                 _imagePreview: {
                     type: String,
                     computed: '_computeImagePreviewClass(resource)'
-                },
-
-                _loader: {
-                    type: Boolean,
-                    value: false
                 }
             },
 
-            _validateImageFile: function(file) {
-                var validFileTypes = ['image/jpg', 'image/jpeg', 'image/png'],
-                        fileType = file.type,
-                        valid = true;
-
-                if (file.size > 1048576) {
-                    this.fire('image-upload-error', 'Image size must be less than 1MB.');
-                    valid = false;
-                }
-                else {
-
-                    for (var i = 0; i < validFileTypes.length; i++) {
-
-                        if (validFileTypes[i] === fileType) {
-                            valid = true;
-                            break;
-                        }
-                        else {
-                            valid = false;
-                        }
-
-                        if (i === (validFileTypes.length - 1) && !valid) {
-                            this.fire('image-upload-error', 'Allowed file types are: jpg, jpeg and png.');
-                        }
-                    }
-
-                }
-
-                return valid;
-
-            },
-
-            _setNewImage: function(file) {
-                var reader = new FileReader();
-
-                reader.onload = function(e) {
-                    this.resource.application_url = e.target.result;
-
-                    var resource = JSON.parse(JSON.stringify(this.resource));
-                    this.resource = {};
-                    this.resource = resource;
-
-                }.bind(this);
-
-                reader.readAsDataURL(file);
-
-                this.fire('resource-image-changed');
-            },
-
-            _onUploadImage: function(event) {
-                var input = event.target;
-
-                if (input.files && input.files[0]) {
-                    var file = input.files[0],
-                            formData = new FormData(),
-                            request = new XMLHttpRequest();
-
-                    /** To ensure that on-change event will be triggered even if user tries to upload same image again */
-                    this.$$('#resourceImage').value = null;
-                    if (!this._validateImageFile(file)) {
-                        return false;
-                    }
-
-                    formData.append('file', file, file.name);
-
-                    request.onreadystatechange = function()
-                    {
-                        if (request.readyState == 4 && request.status == 200) {
-                            this._setNewImage(file);
-                        }
-                    }.bind(this);
-
-                    request.open('POST', this.imageSettingsApi, true);
-                    request.setRequestHeader('Authorization', this._computedHeaders);
-                    request.send(formData);
-                }
-            },
-
-            /**
-             * Computes authorization headers.
-             *
-             * @param {Object} authorizationToken
-             * @returns {{Authorization: string}}
-             * @private
-             */
-            _computeHeaders: function (authorizationToken) {
-                return 'token ' + authorizationToken;
-            },
-
-            _computeImagePreviewClass: function(resource) {
-                return (resource && resource.application_url) ? 'has-image' : 'no-image';
-            },
+            behaviors: [
+                Polymer.AppscoUploadImageBehavior
+            ],
 
             /**
              * Resets component.
@@ -255,9 +87,32 @@
             reset: function() {
                 var resource = JSON.parse(JSON.stringify(this.resource));
 
-                this.resource = {};
-                this.resource = resource;
+                this.set('resource', {});
+                this.set('resource', resource);
+            },
 
+            _computeImagePreviewClass: function(resource) {
+                return (resource && resource.application_url) ? 'has-image' : 'no-image';
+            },
+
+            _setNewImage: function(file) {
+                var reader = new FileReader();
+
+                reader.onload = function(e) {
+                    this._setObjectAttribute('resource', 'application_url', e.target.result);
+                }.bind(this);
+
+                reader.readAsDataURL(file);
+            },
+
+            _fireChangeEvent: function() {
+                this.fire('resource-image-changed');
+            },
+
+            _setStateAfterImageIsRemoved: function(response) {
+                this.set('resource', response);
+                this._fireChangeEvent();
+                this._hideLoader();
             }
         });
     </script>
