--- a/src/company/appsco-company-image-settings.html
+++ b/src/company/appsco-company-image-settings.html
@@ -1,94 +1,47 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../bower_components/iron-image/iron-image.html">
 <link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 
 <link rel="import" href="../components/components/appsco-loader.html">
+<link rel="import" href="../components/components/appsco-upload-image-behavior.html">
+<link rel="import" href="../components/components/appsco-upload-image-styles.html">
 
 <dom-module id="appsco-company-image-settings">
     <template>
-        <style>
-            :host {
-                display: inline-block;
-                position: relative;
-                @apply(--appsco-company-image-settings);
-            }
-            .upload-container {
-                width: 96px;
-                height: 96px;
-                margin-left: auto;
-                margin-right: auto;
-                overflow: hidden;
-                position: relative;
-                @apply(--company-image-upload-container);
-            }
-            .company-image, .company-image-upload, .icon-upload {
-                position: absolute;
-                top: 0;
-                bottom: 0;
-                left: 0;
-                right: 0;
-                margin: auto;
-            }
-            .company-image {
-                width: 96px;
-                height: 96px;
-                --iron-image-placeholder: {
-                    background: #eeeeee;
-                };
-
-                @apply(--company-image);
-            }
-            .company-image-upload {
-                background-color: rgba(250, 250, 250, 0.8);
-                display: block;
-                opacity: 0;
-                z-index: 5;
-                cursor: pointer;
-                @apply(--company-image-upload-field);
-            }
-            .company-image-upload.no-image {
-                opacity: 1;
-            }
-            .company-image-upload:hover {
-                opacity: 1;
-                transition: opacity .2s ease-in;
-            }
-            .icon-upload {
-                width: 32px;
-                height: 32px;
-                @apply(--company-image-upload-icon);
-            }
-            .upload-file {
-                width: 0;
-                height: 0;
-                opacity: 0;
-            }
+        <style include="appsco-upload-image-styles">
         </style>
 
         <div class="upload-container">
+            <appsco-loader active="[[ _loader ]]" loader-alt="AppsCo is processing request" multi-color></appsco-loader>
 
-            <appsco-loader active="[[ _loader ]]" loader-alt="Appsco is saving company logo" multi-color></appsco-loader>
-
-            <iron-image class="company-image"
+            <iron-image class="item-image"
                         src="[[ company.image ]]"
                         alt="Company logo"
                         sizing="contain"></iron-image>
 
             <template is="dom-if" if="[[ !previewOnly ]]">
-                <label for="companyImage"
-                       class$="company-image-upload [[ _imagePreview ]]">
+                <label for="imageInput"
+                       class$="item-image-upload [[ _imagePreview ]]">
                     <iron-icon icon="file-upload" class="icon-upload"></iron-icon>
                 </label>
 
                 <input type="file"
                        accept="image/*"
-                       id="companyImage"
+                       id="imageInput"
                        name="company-image"
                        class="upload-file"
                        on-change="_onUploadImage">
             </template>
         </div>
+
+        <template is="dom-if" if="[[ !previewOnly ]]">
+            <template is="dom-if" if="[[ company.image ]]">
+                <paper-button class="remove-action"
+                              on-tap="_onRemoveImageAction">Remove logo</paper-button>
+            </template>
+        </template>
 
     </template>
     <script>
@@ -105,153 +58,47 @@
                     notify: true
                 },
 
-                /**
-                 * Authorization token for the account.
-                 */
-                authorizationToken: {
-                    type: String,
-                    value: ''
-                },
-
-                /**
-                 * Account image settings api link.
-                 */
-                imageSettingsApi: {
-                    type: String
-                },
-
-                /**
-                 * Preview only. Without upload.
-                 */
-                previewOnly: {
-                    type: Boolean,
-                    value: false
-                },
-
-                /**
-                 * Computed headers.
-                 * It contains authorization token.
-                 */
-                _computedHeaders: {
-                    type: Object,
-                    computed: "_computeHeaders(authorizationToken)"
-                },
-
                 _imagePreview: {
                     type: String,
                     computed: '_computeImagePreviewClass(company)'
-                },
-
-                _loader: {
-                    type: Boolean,
-                    value: false
                 }
-
             },
 
-            _validateImageFile: function(file) {
-                var validFileTypes = ['image/jpg', 'image/jpeg', 'image/png'],
-                        fileType = file.type,
-                        valid = true;
+            behaviors: [
+                Polymer.AppscoUploadImageBehavior
+            ],
 
-                if (file.size > 1048576) {
-                    this.fire('image-upload-error', 'Image size must be less than 1MB.');
-                    valid = false;
-                }
-                else {
+            reset: function() {
+                var company = JSON.parse(JSON.stringify(this.company));
 
-                    for (var i = 0; i < validFileTypes.length; i++) {
+                this.set('company', {});
+                this.set('company', company);
+            },
 
-                        if (validFileTypes[i] === fileType) {
-                            valid = true;
-                            break;
-                        }
-                        else {
-                            valid = false;
-                        }
-
-                        if (i === (validFileTypes.length - 1) && !valid) {
-                            this.fire('image-upload-error', 'Allowed file types are: jpg, jpeg and png.');
-                        }
-                    }
-
-                }
-
-                return valid;
-
+            _computeImagePreviewClass: function(company) {
+                return (company && company.image) ? 'has-image' : 'no-image';
             },
 
             _setNewImage: function(file) {
                 var reader = new FileReader();
 
                 reader.onload = function(e) {
-                    this.company.image = e.target.result;
-
-                    var company = JSON.parse(JSON.stringify(this.company));
-                    this.company = {};
-                    this.company = company;
-
+                    this._setObjectAttribute('company', 'image', e.target.result);
                 }.bind(this);
 
                 reader.readAsDataURL(file);
             },
 
-            _onUploadImage: function(event) {
-                var input = event.target;
-
-                if (input.files && input.files[0]) {
-                    var file = input.files[0],
-                            formData = new FormData(),
-                            request = new XMLHttpRequest();
-
-                    /** To ensure that on-change event will be triggered even if user tries to upload same image again */
-                    this.$$('#companyImage').value = null;
-                    if (!this._validateImageFile(file)) {
-                        return false;
-                    }
-
-                    formData.append('file', file, file.name);
-
-                    request.onreadystatechange = function()
-                    {
-                        if (request.readyState == 4 && request.status == 200) {
-                            this._setNewImage(file);
-                            this.fire('company-logo-changed', {
-                                company: JSON.parse(request.response)
-                            })
-                        }
-                    }.bind(this);
-
-                    request.open('POST', this.imageSettingsApi, true);
-                    request.setRequestHeader('Authorization', this._computedHeaders);
-                    request.send(formData);
-                }
+            _fireChangeEvent: function(response) {
+                this.fire('company-logo-changed', {
+                    company: JSON.parse(response)
+                });
             },
 
-            /**
-             * Computes authorization headers.
-             *
-             * @param {Object} authorizationToken
-             * @returns {{Authorization: string}}
-             * @private
-             */
-            _computeHeaders: function (authorizationToken) {
-                return 'token ' + authorizationToken;
-            },
-
-            _computeImagePreviewClass: function(company) {
-                return company && company.image ? 'has-image' : 'no-image';
-            },
-
-            /**
-             * Resets component.
-             */
-            reset: function() {
-                var company = JSON.parse(JSON.stringify(this.company));
-
-                this.company = {};
-                this.company = company;
-
+            _setStateAfterImageIsRemoved: function(response) {
+                this.set('company', response);
+                this._fireChangeEvent(JSON.stringify(response));
+                this._hideLoader();
             }
         });
     </script>
