DАSH-3616 Breadcrumbs action fixed

--- a/src/appsco-app.html
+++ b/src/appsco-app.html
@@ -2711,6 +2711,10 @@
                 this._showPage(event.detail.item.name);
             },
 
+            _onShowPage: function(event) {
+                this._showPage(event.detail.page);
+            },
+
             _showPage: function(name) {
                 this.set('routeData.page', name);
             },
