DASH-3651 Tutorial icon appears even when user has no company

--- a/src/appsco-app.html
+++ b/src/appsco-app.html
@@ -45,6 +45,7 @@
                 product-business="[[ _companiesAccountHasPermissionTo ]]"
                 product-partner="[[ account.partner ]]"
                 domain="{{ domain }}"
+                tutorial-action-available="[[ _tutorialsPageVisible ]]"
                 on-brand-action="_onBrandAction"
                 on-appsco-product-changed="_onAppscoProductChangeAction"
                 on-account-chat="_onAccountChat"
