DASH-3653 [Front end][Groups] Refresh not working when removing resource from the group

--- a/src/appsco-groups-page.html
+++ b/src/appsco-groups-page.html
@@ -518,15 +518,15 @@
             },
 
             _removeGroupRoles: function(roles) {
-                this.$.appscoCompanyGroupRoles.removeGroupRoles(roles);
+                this.$.appscoCompanyGroupRoles.removeGroupItems(roles);
             },
 
             _removeGroupContacts: function(contacts) {
-                this.$.appscoCompanyGroupContacts.removeGroupContacts(contacts);
+                this.$.appscoCompanyGroupContacts.removeGroupItems(contacts);
             },
 
             _removeGroupResources: function(resources) {
-                this.$.appscoCompanyGroupResources.removeGroupResources(resources);
+                this.$.appscoCompanyGroupResources.removeGroupItems(resources);
             },
 
             _removeGroupItems: function(items, resourceType) {
