DASH-3648 [Directory] Domain not verified info showing even when the domain is verified

--- a/src/appsco-directory-page.html
+++ b/src/appsco-directory-page.html
@@ -771,6 +771,7 @@
                 if (200 === status && response) {
                     this._verifiedDomains = response.verified;
                     this._domainsLoaded = true;
+                    this._evaluateDomainVerification();
                 }
             },
 
