DASH-3656 [Front end][Manage Customer] Cards placing when there are only two cards

--- a/src/company/appsco-company-idp-domains.html
+++ b/src/company/appsco-company-idp-domains.html
@@ -46,7 +46,7 @@ Domains are loaded inside component through iron-ajax.
                 position: absolute;
                 top: 0;
                 left: 0;
-                @apply(--domains-progress-bar);
+                @apply(--appsco-list-progress-bar);
             }
             .message {
                 color: var(--secondary-text-color);
