--- a/src/company/appsco-company-components-page.html
+++ b/src/company/appsco-company-components-page.html
@@ -1,5 +1,4 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
-<link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../../bower_components/neon-animation/animations/hero-animation.html">
 <link rel="import" href="../../bower_components/neon-animation/animations/cascaded-animation.html">
 <link rel="import" href="../../bower_components/neon-animation/animations/fade-in-animation.html">
@@ -11,27 +10,14 @@
 <link rel="import" href="appsco-company-details.html">
 <link rel="import" href="appsco-company-brand-details.html">
 <link rel="import" href="appsco-company-domains.html">
+<link rel="import" href="../components/page/appsco-layout-with-cards-styles.html">
 
 <dom-module id="appsco-company-components-page">
     <template>
-        <style>
+        <style include="appsco-layout-with-cards-styles">
             :host {
-                display: block;
-                overflow-y: auto;
-                @apply(--layout-horizontal);
-                @apply(--layout-wrap);
-                @apply(--layout-justified);
                 font-size: 14px;
                 color: var(--primary-text-color);
-                @apply(--appsco-components-page);
-
-                --paper-button: {
-                     padding: 6px 0;
-                     margin: 0;
-                     border-radius: 0;
-                     width: 100%;
-                     color: var(--primary-text-color);
-                 };
 
                 --company-details-label: {
                     font-size: 12px;
@@ -41,37 +27,6 @@
                     font-size: 14px;
                     line-height: 22px;
                 };
-            }
-            :host > * {
-                width: calc(100% / 3 - 10px);
-                @apply(--layout-self-start);
-            }
-            paper-card {
-                min-height: 150px;
-                margin-bottom: 10px;
-                box-sizing: border-box;
-                width: 100%;
-
-                --paper-card-content: {
-                     min-height: 70px;
-                     box-sizing: border-box;
-                 };
-                --paper-card-actions: {
-                     padding: 0;
-                     border-color: var(--divider-color);
-                 };
-                --paper-card-header-text: {
-                    padding: 8px 16px;
-                    color: var(--primary-text-color);
-                    font-size: 18px;
-                    border-bottom: 1px solid var(--divider-color);
-                 };
-            }
-            .details-branding, .domains-labels {
-                @apply(--layout-vertical);
-            }
-            .details-branding, .domains-labels {
-                margin-right: 10px;
             }
             appsco-company-details {
                 --company-detail-container: {
@@ -84,123 +39,113 @@
                     background-color: var(--body-background-color);
                 };
             }
-            .message {
+            :host .message {
                 @apply(--info-message);
-            }
-            :host([medium-screen]) > * {
-                width: calc(100% / 2 - 10px);
-            }
-            :host([medium-screen]) .domains-labels {
-                margin-right: 0;
-            }
-            :host([tablet-screen]) > * {
-                width: 100%;
-            }
-            :host([tablet-screen]) .details-branding {
-                margin-right: 0;
             }
         </style>
 
         <iron-media-query query="(max-width: 1200px)" query-matches="{{ mediumScreen }}"></iron-media-query>
         <iron-media-query query="(max-width: 800px)" query-matches="{{ tabletScreen }}"></iron-media-query>
 
-        <div class="details-branding">
-            <paper-card heading="Settings"
-                        id="companySettingsCard"
-                        class="appsco-company-details">
-                <div class="card-content">
-                    <appsco-company-details company="[[ company ]]"></appsco-company-details>
-                </div>
+        <div class="cols-layout three-cols-layout">
+            <div class="col">
+                <paper-card heading="Settings"
+                            id="companySettingsCard"
+                            class="appsco-company-details">
+                    <div class="card-content">
+                        <appsco-company-details company="[[ company ]]"></appsco-company-details>
+                    </div>
 
-                <div class="card-actions">
-                    <paper-button on-tap="_onManageCompanySettings"
-                                  id="companySettingsCardBtn"
-                    >Manage</paper-button>
-                </div>
-            </paper-card>
+                    <div class="card-actions">
+                        <paper-button on-tap="_onManageCompanySettings"
+                                      id="companySettingsCardBtn"
+                        >Manage</paper-button>
+                    </div>
+                </paper-card>
 
-            <paper-card heading="Transfer Token"
-                        class="transfer-token">
-                <div class="card-content card-content-no-padding">
-                    <p class="message">
-                        Generate transfer token in order to enable the partner to add your company as a customer.
-                    </p>
-                </div>
-                <div class="card-actions">
-                    <paper-button on-tap="_onManageTransferToken">Manage</paper-button>
-                </div>
-            </paper-card>
-        </div>
+                <paper-card heading="Transfer Token"
+                            class="transfer-token">
+                    <div class="card-content card-content-no-padding">
+                        <p class="message">
+                            Generate transfer token in order to enable the partner to add your company as a customer.
+                        </p>
+                    </div>
+                    <div class="card-actions">
+                        <paper-button on-tap="_onManageTransferToken">Manage</paper-button>
+                    </div>
+                </paper-card>
+            </div>
 
-        <div class="domains-labels">
-            <paper-card heading="Domains" id="companySettingsDomainsCard"
-                        class="appsco-company-domains">
-                <div class="card-content">
-                    <appsco-company-domains id="appscoCompanyDomains"
-                                            domains-api="[[ domainsApi ]]"
-                                            authorization-token="[[ authorizationToken ]]"
-                                            size="5"
-                                            preview
-                                            on-empty-load="_onDomainsEmptyLoad"></appsco-company-domains>
-                </div>
+            <div class="col">
+                <paper-card heading="Domains" id="companySettingsDomainsCard"
+                            class="appsco-company-domains">
+                    <div class="card-content">
+                        <appsco-company-domains id="appscoCompanyDomains"
+                                                domains-api="[[ domainsApi ]]"
+                                                authorization-token="[[ authorizationToken ]]"
+                                                size="5"
+                                                preview
+                                                on-empty-load="_onDomainsEmptyLoad"></appsco-company-domains>
+                    </div>
 
-                <div class="card-actions">
-                    <paper-button on-tap="_onManageCompanyDomains" id="companySettingsDomainsCardButton">Manage</paper-button>
-                </div>
-            </paper-card>
+                    <div class="card-actions">
+                        <paper-button on-tap="_onManageCompanyDomains" id="companySettingsDomainsCardButton">Manage</paper-button>
+                    </div>
+                </paper-card>
 
-            <paper-card heading="IdP Settings" id="companySettingsManageIdpCard">
-                <div class="card-content">
-                    <p class="message">
-                        Configure Identity Provider for your verified domains.
-                    </p>
-                    <p class="message">
-                        You can set up one IdP per domain.
-                        To setup an IdP, enter the information provided by the Identity Provider.
-                    </p>
-                </div>
+                <paper-card heading="IdP Settings" id="companySettingsManageIdpCard">
+                    <div class="card-content">
+                        <p class="message">
+                            Configure Identity Provider for your verified domains.
+                        </p>
+                        <p class="message">
+                            You can set up one IdP per domain.
+                            To setup an IdP, enter the information provided by the Identity Provider.
+                        </p>
+                    </div>
 
-                <div class="card-actions">
-                    <paper-button id="companySettingsManageIdpCardBtn"
-                                  on-tap="_onManageCompanyIdPSettings">
-                        Manage
-                    </paper-button>
-                </div>
-            </paper-card>
-        </div>
+                    <div class="card-actions">
+                        <paper-button id="companySettingsManageIdpCardBtn"
+                                      on-tap="_onManageCompanyIdPSettings">
+                            Manage
+                        </paper-button>
+                    </div>
+                </paper-card>
+            </div>
 
-        <div class="idp-settings">
+            <div class="col">
 
-            <paper-card heading="Branding"
-                        class="appsco-company-brand-details"
-                        id="companySettingsBrandingCard"
-            >
-                <div class="card-content">
-                    <appsco-company-brand-details company="[[ company ]]"></appsco-company-brand-details>
-                </div>
+                <paper-card heading="Branding"
+                            class="appsco-company-brand-details"
+                            id="companySettingsBrandingCard"
+                >
+                    <div class="card-content">
+                        <appsco-company-brand-details company="[[ company ]]"></appsco-company-brand-details>
+                    </div>
 
-                <div class="card-actions">
-                    <paper-button on-tap="_onManageCompanyBrandSettings"
-                                  id="companySettingsBrandingCardBtn"
-                    >Manage</paper-button>
-                </div>
-            </paper-card>
+                    <div class="card-actions">
+                        <paper-button on-tap="_onManageCompanyBrandSettings"
+                                      id="companySettingsBrandingCardBtn"
+                        >Manage</paper-button>
+                    </div>
+                </paper-card>
 
-            <paper-card heading="Branded Login"
-                        id="companySettingsBrandedLoginCard"
-            >
-                <div class="card-content">
-                    <p class="message">
-                        Customize login form for your company and add your own branding.
-                    </p>
-                </div>
+                <paper-card heading="Branded Login"
+                            id="companySettingsBrandedLoginCard"
+                >
+                    <div class="card-content">
+                        <p class="message">
+                            Customize login form for your company and add your own branding.
+                        </p>
+                    </div>
 
-                <div class="card-actions">
-                    <paper-button
-                            id="companySettingsBrandedLoginCardBtn"
-                            on-tap="_onManageCompanyBrandedLogin">Manage</paper-button>
-                </div>
-            </paper-card>
+                    <div class="card-actions">
+                        <paper-button
+                                id="companySettingsBrandedLoginCardBtn"
+                                on-tap="_onManageCompanyBrandedLogin">Manage</paper-button>
+                    </div>
+                </paper-card>
+            </div>
         </div>
 
     </template>
