--- a/src/company/appsco-company-domains.html
+++ b/src/company/appsco-company-domains.html
@@ -72,7 +72,7 @@ Custom property | Description | Default
                 position: absolute;
                 top: 0;
                 left: 0;
-                @apply(--domains-progress-bar);
+                @apply(--appsco-list-progress-bar);
             }
             paper-button {
                 display: block;
