--- a/src/directory/appsco-directory-role-applications.html
+++ b/src/directory/appsco-directory-role-applications.html
@@ -29,6 +29,7 @@ Contains info about resources shared to company role.
             :host paper-progress {
                 width: 100%;
                 --paper-progress-active-color: #7baaf7;
+                @apply(--appsco-list-progress-bar);
             }
             :host .progress {
                 height: 6px;
