--- a/src/provisioning/appsco-manage-integration-components-page.html
+++ b/src/provisioning/appsco-manage-integration-components-page.html
@@ -1,5 +1,4 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
-<link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../../bower_components/neon-animation/neon-shared-element-animatable-behavior.html">
 <link rel="import" href="../../bower_components/neon-animation/animations/cascaded-animation.html">
 <link rel="import" href="../../bower_components/neon-animation/animations/hero-animation.html">
@@ -12,119 +11,62 @@
 <link rel="import" href="../components/integration/appsco-integration-settings-card.html">
 <link rel="import" href="../components/integration/appsco-integration-rules-card.html">
 <link rel="import" href="../components/integration/appsco-integration-webhooks-card.html">
+<link rel="import" href="../components/page/appsco-layout-with-cards-styles.html">
 
 <dom-module id="appsco-manage-integration-components-page">
     <template>
-        <style>
-            :host {
-                display: block;
-                overflow-y: auto;
-                @apply(--layout-horizontal);
-                @apply(--layout-wrap);
-                @apply(--layout-justified);
-                @apply(--appsco-components-page);
-
-                --paper-button: {
-                    padding: 6px 0;
-                    margin: 0;
-                    border-radius: 0;
-                    width: 100%;
-                    color: var(--primary-text-color);
-                };
-            }
-            paper-card {
-                box-sizing: border-box;
-                width:100%;
-                --paper-card-content: {
-                    min-height: 70px;
-                    box-sizing: border-box;
-                };
-                --paper-card-actions: {
-                    padding: 0;
-                    border-color: var(--divider-color);
-                };
-                --paper-card-header-text: {
-                    padding: 8px 16px;
-                    font-size: 18px;
-                    color: var(--primary-text-color);
-                    border-bottom: 1px solid var(--divider-color);
-                };
-
-                --paper-button: {
-                    padding: 6px 0;
-                    margin: 0;
-                    border-radius: 0;
-                    width: 100%;
-                    color: var(--primary-text-color);
-                };
-
-            }
-            :host > * {
-                width: calc(100% / 3 - 10px);
-                margin-bottom: 10px;
-                @apply(--layout-self-start);
-            }
-            :host([_twoColumnsView]) > * {
-                width: calc(100% / 2 - 10px);
-            }
-            :host([medium-screen]) > * {
-                width: calc(100% / 2 - 10px);
-            }
-            :host([mobile-screen]) > * {
-                width: 100%;
-            }
-            :host([mobile-screen]) .integration-settings, .integration-rules {
-                margin-right: 0;
-            }
-        </style>
+        <style include="appsco-layout-with-cards-styles"></style>
 
         <iron-media-query query="(max-width: 1200px)" query-matches="{{ mediumScreen }}"></iron-media-query>
-        <iron-media-query query="(max-width: 800px)" query-matches="{{ mobileScreen }}"></iron-media-query>
+        <iron-media-query query="(max-width: 800px)" query-matches="{{ tabletScreen }}"></iron-media-query>
 
-        <div class="integration-settings">
-            <paper-card heading="Settings" class="card appsco-integration-settings-card">
-                <div class="card-content">
-                    <appsco-integration-settings-card>
-                    </appsco-integration-settings-card>
-                </div>
-
-                <div class="card-actions">
-                    <paper-button on-tap="_onManageIntegrationSettings">Manage</paper-button>
-                </div>
-            </paper-card>
-        </div>
-
-        <div class="integration-rules">
-            <paper-card heading="Rules" class="card appsco-integration-rules-card">
-                <div class="card-content">
-                    <appsco-integration-rules-card>
-                    </appsco-integration-rules-card>
-                </div>
-
-                <div class="card-actions">
-                    <paper-button on-tap="_onManageIntegrationRules">Manage</paper-button>
-                </div>
-            </paper-card>
-        </div>
-        <template is="dom-if" if="[[ _isRA ]]">
-            <div class="integration-webhooks">
-                <paper-card heading="Webhooks" class="card appsco-integration-webhooks-card">
+        <div class="cols-layout three-cols-layout">
+            <div class="col">
+                <paper-card heading="Settings" class="card appsco-integration-settings-card">
                     <div class="card-content">
-                        <appsco-integration-webhooks-card
-                            id="appscoIntegrationWebhooksCard"
-                            authorization-token="[[ authorizationToken ]]"
-                            webhook-api="[[ webhookApi ]]"
-                            on-web-hooks-loaded="_onWebHooksLoaded">
-                        </appsco-integration-webhooks-card>
+                        <appsco-integration-settings-card>
+                        </appsco-integration-settings-card>
                     </div>
-                    <template is="dom-if" if="[[ _showManageWebHooks ]]">
-                        <div class="card-actions">
-                            <paper-button on-tap="_onManageWebhooks">Manage</paper-button>
-                        </div>
-                    </template>
+
+                    <div class="card-actions">
+                        <paper-button on-tap="_onManageIntegrationSettings">Manage</paper-button>
+                    </div>
                 </paper-card>
             </div>
-        </template>
+
+            <div class="col">
+                <paper-card heading="Rules" class="card appsco-integration-rules-card">
+                    <div class="card-content">
+                        <appsco-integration-rules-card>
+                        </appsco-integration-rules-card>
+                    </div>
+
+                    <div class="card-actions">
+                        <paper-button on-tap="_onManageIntegrationRules">Manage</paper-button>
+                    </div>
+                </paper-card>
+            </div>
+
+            <template is="dom-if" if="[[ _isRA ]]">
+                <div class="col">
+                    <paper-card heading="Webhooks" class="card appsco-integration-webhooks-card">
+                        <div class="card-content">
+                            <appsco-integration-webhooks-card
+                                id="appscoIntegrationWebhooksCard"
+                                authorization-token="[[ authorizationToken ]]"
+                                webhook-api="[[ webhookApi ]]"
+                                on-web-hooks-loaded="_onWebHooksLoaded">
+                            </appsco-integration-webhooks-card>
+                        </div>
+                        <template is="dom-if" if="[[ _showManageWebHooks ]]">
+                            <div class="card-actions">
+                                <paper-button on-tap="_onManageWebhooks">Manage</paper-button>
+                            </div>
+                        </template>
+                    </paper-card>
+                </div>
+            </template>
+        </div>
 
     </template>
 
@@ -168,7 +110,7 @@
                     reflectToAttribute: true
                 },
 
-                mobileScreen: {
+                tabletScreen: {
                     type: Boolean,
                     value: false,
                     reflectToAttribute: true
