--- a/src/appsco-manage-integration-page.html
+++ b/src/appsco-manage-integration-page.html
@@ -13,6 +13,7 @@
 <link rel="import" href="provisioning/appsco-integration-settings-page.html">
 <link rel="import" href="provisioning/appsco-integration-rules-page.html">
 <link rel="import" href="provisioning/appsco-integration-webhooks-page.html">
+<link rel="import" href="components/integration/appsco-integration-templates.html">
 
 <dom-module id="appsco-manage-integration-page">
     <template>
@@ -49,8 +50,7 @@
                 margin-top: 10px;
             }
             :host .info {
-                @apply(--paper-font-body1);
-                margin-top: 11px;
+                @apply(--info-message);
             }
             :host .kind-info {
                 font-size: 12px;
@@ -86,6 +86,9 @@
                     border: 4px solid var(--body-background-color);
                 };
             }
+            :host .info-content {
+                margin-top: 0;
+            }
         </style>
 
         <iron-media-query query="(max-width: 1200px)" query-matches="{{ mediumScreen }}"></iron-media-query>
@@ -99,7 +102,7 @@
             headers="[[ _headers ]]">
         </iron-ajax>
 
-        <appsco-content id="appscoContent" resource-active>
+        <appsco-content id="appscoContent" resource-active info-active$="[[ _infoSectionActive ]]">
 
             <div class="flex-vertical" resource>
 
@@ -228,7 +231,28 @@
 
                     </neon-animated-pages>
                 </div>
+            </div>
 
+            <div class="flex-vertical" info>
+                <div class="info-header flex-horizontal">
+                    <span class="info-title">Integration templates</span>
+                </div>
+
+                <div class="info-content flex-vertical">
+                    <p class="info">Add one of the predefined integration templates to complete the quick setup.</p>
+
+                    <appsco-integration-templates
+                            id="appscoIntegrationTemplates"
+                            integration="[[ integration ]]"
+                            list-api="[[ _integrationTemplatesApi ]]"
+                            authorization-token="[[ authorizationToken ]]"
+                            api-errors="[[ apiErrors ]]"
+                            type="integration-template"
+                            size="1000"
+                            on-list-loaded="_onIntegrationTemplatesLoaded"
+                            on-list-empty="_onIntegrationTemplatesLoaded">
+                    </appsco-integration-templates>
+                </div>
             </div>
         </appsco-content>
 
@@ -272,6 +296,11 @@
                 _webhookApi: {
                     type: String,
                     computed: '_computeWebhookApi(integration)'
+                },
+
+                _integrationTemplatesApi: {
+                    type: String,
+                    computed: '_computeIntegrationTemplatesApi(integration)'
                 },
 
                 authorizationToken: {
@@ -358,6 +387,11 @@
                 },
 
                 pageLoaded: {
+                    type: Boolean,
+                    value: false
+                },
+
+                _infoSectionActive: {
                     type: Boolean,
                     value: false
                 }
@@ -519,6 +553,10 @@
                 return integration && integration.meta && integration.meta.webHooks ? integration.meta.webHooks : '';
             },
 
+            _computeIntegrationTemplatesApi: function(integration) {
+                return (integration && integration.meta && integration.meta.templates) ? integration.meta.templates : '';
+            },
+            
             _computeIsIntegrationRA: function(integration) {
                 return integration && integration.integration && integration.kind == 'ra';
             },
@@ -593,8 +631,11 @@
                 request.send(options).then(function() {
                     window.location = 'data:application/octet-stream;charset=utf-16le;base64,' + request.response;
                 }.bind(this));
-            }
+            },
 
+            _onIntegrationTemplatesLoaded: function(event) {
+                this._infoSectionActive = (event.detail.items && (0 < event.detail.items.length));
+            }
         });
     </script>
 </dom-module>
